adding fetchCoins function

--- a/Node.js/public/index.html
+++ b/Node.js/public/index.html
@@ -13,7 +13,7 @@
 <div id="chartContainer" style="height: 80%; max-width: 90%; margin: 0px auto;"></div>
 
 <div id="coins" style="height: 80%; max-width: 90%; margin: 0px auto;">
-	<button class="button button1" onclick="FetchFunction()" >Show Data</button>
+	<!-- <button class="button button1" onclick="FetchFunction()" >Show Data</button> -->
 </div>
 
 
