Ichimoku diagram first phase

--- a/Node.js/public/index.html
+++ b/Node.js/public/index.html
@@ -12,10 +12,7 @@
 <body style=" height:1000px" >
 <div id="chartContainer" style="height: 80%; max-width: 90%; margin: 0px auto;"></div>
 
-<div id="coins" style="height: 80%; max-width: 90%; margin: 0px auto;">
-	<!-- <button class="button button1" onclick="FetchFunction()" >Show Data</button> -->
-</div>
-
+<div id="coins" style="height: 80%; max-width: 90%; margin: 0px auto;"></div>
 
 <script src="./js/canvasjs.min.js"></script>
 
