--- a/Node.js/public/index.html
+++ b/Node.js/public/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
-<meta charset="UTF-8">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
 
+    <link rel="stylesheet" href="./css/mystyle.css">
 
-<link rel="stylesheet" href="./css/mystyle.css">
-
-<script src="./js/diagram.js"></script>
+    <script src="./js/diagram.js"></script>
 
 </head>
-<body style=" height:1000px" >
-<div id="chartContainer" style="height: 80%; max-width: 90%; margin: 0px auto;"></div>
 
-<div id="coins" style="height: 80%; max-width: 90%; margin: 0px auto;"></div>
+<body>
+    <div class="bg-danger">
+        <div style="height:800px">
+            <div id="chartContainer" style="height: 80%; max-width: 90%; margin: 0px auto;"/>
+        </div>
+        <div class="bg-danger">
 
-<script src="./js/canvasjs.min.js"></script>
+        </div>
+    </div>
 
+    <div id="coins" style="height: 80%; max-width: 90%; margin: 0px auto;"/>
+
+    <script src="./js/canvasjs.min.js"></script>
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
