--- a/Node.js/public/index.html
+++ b/Node.js/public/index.html
@@ -21,7 +21,7 @@
                     <button class="btn btn-info m-2">5M</button>
                     <button class="btn btn-info m-2">15M</button>
                     <button class="btn btn-info m-2">60M</button>
-                    <button class="btn btn-info m-2">4h</button>
+                    <button class="btn btn-info m-2">4H</button>
                     <button class="btn btn-info m-2">1D</button>
                 </div>
                 <div class="d-flex flex-column bg-secondary SideJR">
